# jnova

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  reinit.sh
cmake/: add_gtest.cmake  add_jnova_test.cmake  fetch_gtest.cmake  logger.cmake  write_test_data.cmake  write_test_data_file.cmake
docs/: README-2.md  json-grammar-notes.md  note.txt
include/: jbuff.hpp  jnova.hpp  jsonbuffer.hpp  typedefs.hpp
include/json/: buffer.hpp  lexer.hpp  typedef.hpp  typedefs.hpp
script/: Reinitialize_Cmd.sh
src/: CMakeLists.txt  jbuff.lib.cpp  jnova.cpp  jnova.lib.cpp  jsonBuffer.cpp  jsonLexer.cpp  jsonTypedef.cpp  jsonbuffer.cpp
tests/: CMakeLists.txt  JsonBuffer.test.cpp  JsonLexer.test.cpp  jbuff.test.cpp  json_buffer.test.cpp  json_lexer.test.cpp  suite_01.test.cpp  test_jsonbuffer.cpp
tests/data/: test_0.json
